--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "build": "cross-env NODE_ENV=\"production\" webpack --config client/webpack.config.js -p",
+    "build": "cross-env NODE_ENV=\"production\" webpack --config ./client/webpack.config.js --mode production",
     "dev": "cross-env NODE_ENV=\"development\" nodemon --ignore ./client/ index.js"
   },
   "repository": {
@@ -55,8 +55,8 @@
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
     "url-loader": "^4.1.1",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^5.3.1",
     "webpack-hot-middleware": "^2.25.1"
   }
