--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "cross-env NODE_ENV=\"production\" node index.js",
     "build": "cross-env NODE_ENV=\"production\" webpack --config ./client/webpack.config.js --mode production",
     "dev": "cross-env NODE_ENV=\"development\" nodemon --ignore ./client/ index.js"
+  },
+  "engines": {
+    "node": ">=v18.17.0"
   },
   "repository": {
     "type": "git",
@@ -34,6 +37,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql-request": "^6.1.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
